[package]
name = "quantum-sim-godot-bindings"
version = "0.1.0"
authors = ["Cláudio Gomes <cfpgcp3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.1"
quantum-sim = { git = "https://github.com/TofuLynx/quantum-sim.git" }
